--- a/style/craps.css
+++ b/style/craps.css
@@ -1,19 +1,35 @@
 body{
-    background-color: darkgreen
+    background-color: rgb(179, 60, 101)
 }
 
 #header{
+    display: grid;
+    grid-template-columns: 30% 30% 20%;
     background-color: palegoldenrod;
     height: 250px;
+    width: 90%;
+    margin: 0 auto;
     font-weight: bold;
-    text-align: center;
+    border-radius: 10px;
+}
+
+.header-content{
+    background-color: teal;
+    margin: 20px;
 }
 
 #main-body{
     background-color: white;
-    border: 3px solid white;
-    height: 670px;
+    border-radius: 5px;
+    height: 350px;
     width: 80%;
     margin: 20px auto;
+}
+
+#main-container{
+    background-color:teal;
+    height: 500px;
+    width: 90%;
+    margin: 0 auto;
 }
 
