--- a/style/craps.css
+++ b/style/craps.css
@@ -3,8 +3,6 @@ body{
 }
 
 #header{
-    display: grid;
-    grid-template-columns: 30% 30% 20%;
     background-color: palegoldenrod;
     height: 250px;
     width: 90%;
@@ -14,7 +12,6 @@ body{
 }
 
 .header-content{
-    background-color: teal;
     margin: 20px;
 }
 
@@ -28,8 +25,23 @@ body{
 
 #main-container{
     background-color:teal;
-    height: 500px;
+    height: 600px;
     width: 90%;
+    margin: 0 auto;
+    padding: 20px;
+}
+
+#game-container{
+    background-color: white;
+    border: 3px solid rgb(179, 60, 101);
+    width: 95%;
+    height: 400px;
     margin: 0 auto;
 }
 
+#button-area{
+    background-color: white;
+    margin-top: 30px;
+    height: 100px;
+    border: 3px dotted rgb(179, 60, 101);
+}
