--- a/style/craps.css
+++ b/style/craps.css
@@ -3,6 +3,8 @@ body{
 }
 
 #header{
+    display: grid;
+    grid-template-columns: auto auto;
     background-color: palegoldenrod;
     height: 250px;
     width: 90%;
@@ -11,8 +13,9 @@ body{
     border-radius: 10px;
 }
 
-.header-content{
+#header-content{
     margin: 20px;
+    border: 1px solid black;
 }
 
 #main-body{
@@ -24,6 +27,8 @@ body{
 }
 
 #main-container{
+    display: grid;
+    grid-template-columns: 75% 25%;
     background-color:teal;
     height: 600px;
     width: 90%;
@@ -35,13 +40,16 @@ body{
     background-color: white;
     border: 3px solid rgb(179, 60, 101);
     width: 95%;
-    height: 400px;
     margin: 0 auto;
 }
 
-#button-area{
+#button-section{
+    background-color:palegoldenrod;
+}
+.button-area1{
+    text-align: center;
     background-color: white;
-    margin-top: 30px;
-    height: 100px;
-    border: 3px dotted rgb(179, 60, 101);
+    border: 1px solid black;
+    margin-top: 50px;
+    height: 80px;
 }
