--- a/style/style.css
+++ b/style/style.css
@@ -1,6 +1,8 @@
-
+@import url('https://fonts.googleapis.com/css2?family=Spectral+SC:wght@200&display=swap');
 body{
     background-color: lightseagreen;
+    font-family: 'Spectral SC', serif;
+
 }
 
 #title-container{
