--- a/style/craps.css
+++ b/style/craps.css
@@ -66,6 +66,7 @@ h2{
 
 #button-section{
     background-color:palegoldenrod;
+    border-radius: 10px;
 }
 .button-area1{
     text-align: center;
@@ -74,6 +75,6 @@ h2{
     margin-top: 50px;
     height: 80px;
     border-radius: 15px;
-    box-shadow: 10px 10px 5px black;
+    box-shadow: 5px 10px 5px black;
     
 }
