--- a/style/craps.css
+++ b/style/craps.css
@@ -91,12 +91,19 @@ h2{
     display: grid;
     grid-template-columns: auto auto;
     background-color: rgb(179, 60, 101);
-    margin: 10px;
+    margin: 30px;
+    
 }
 
 .play-content{
     border-left: 1px solid white;
-    margin: 15px;
+    border-right: 1px solid white;
+    margin: 10px;
     height: 200px;
+    padding: 20px;
     box-shadow: 5px 5px 25px white;
+}
+
+.message{
+    text-align: center;
 }
