--- a/style/craps.css
+++ b/style/craps.css
@@ -60,8 +60,10 @@ h2{
     height: 450px;
     width: 90%;
     margin: 0 auto;
-    padding: 15px;
+    padding: 30px;
     border-radius: 5px;
+    border-right: 5px solid black;
+    border-left: 5px  black;
     
 }
 
@@ -71,15 +73,11 @@ h2{
     width: 95%;
     margin: 0 auto;
     box-shadow: 10px 10px 5px black;
-    margin-left: 0px;
     border-radius: 5px;
     
 }
 
-#button-section{
-    border-radius: 10px;
-    
-}
+
 
 .button-area1{
     text-align: center;
@@ -87,6 +85,7 @@ h2{
     border: 1px solid black;
     margin-top: 30px;
     height: 80px;
+    width: 200px;
     border-radius: 15px;
     box-shadow: 5px 10px 5px black;
 }
@@ -103,19 +102,19 @@ h2{
 #play{
     display: grid;
     grid-template-columns: auto auto;
-    background-color: rgb(179, 60, 101);
-    margin: 30px;
+    margin: 20px;
     border-radius: 5px;
+    background-color: rgb(179, 60, 101);
     
 }
 
 .play-content{
     border-left: 2px solid white;
     border-right: 2px solid white;
-    margin: 10px;
-    height: 200px;
-    padding: 20px;
-    
+    margin: 15px;
+    height: 150px;
+    padding: 5px;
+    box-shadow: 1px 15px 15px palegoldenrod;
 }
 
 .message{
