--- a/style/style.css
+++ b/style/style.css
@@ -14,6 +14,7 @@ body{
 }
 
 #blog-container{
+    width: 500px;
     background-color: salmon;
     border: 5px solid black;
     margin: 20px auto;
