--- a/style/craps.css
+++ b/style/craps.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Fredericka+the+Great&display=swap');
 
 html{
-    cursor:crosshair;
+    cursor: pointer;
     
 }
 
