--- a/style/craps.css
+++ b/style/craps.css
@@ -70,8 +70,8 @@ h2{
     margin: 0 auto;
     padding: 30px;
     border-radius: 5px;
-    border-right: 5px solid black;
-    border-left: 5px  black;
+    border-right: 5px solid palegoldenrod;
+    border-left: 5px solid  palegoldenrod;
     
 }
 
