--- a/style/style.css
+++ b/style/style.css
@@ -11,6 +11,8 @@ body{
     margin: 0 auto;
     margin-top: 30px;
     text-align: center;
+    border-top: 1px solid black;
+    border-bottom: 1px solid black;
 }
 h3{
     background-color: teal;
@@ -19,7 +21,8 @@ h3{
 #blog-container{
     width: 500px;
     background-color: salmon;
-    border: 5px solid black;
+    border-left: 2px solid black;
+    border-right: 2px solid black;
     margin: 20px auto;
     width: 80%;
     padding: 10px;
